# intro-ML

./: # Underfitting and Overfitting in Neural.py  01-DNN - SOLVED.ipynb  01_nn_training.ipynb  02-Overfit and underfit - SOLVED.ipynb  02-Overfitting y Underfitting - SOLVED.ipynb  02_overfit_underfit.ipynb  03-Hyperparameter Tuning con Optuna - SOLVED.ipynb  03-Hyperparameter tuning - SOLVED.ipynb  03_hyperparameter_tuning.ipynb  CCP.csv  Overfitting y Underfitting.ipynb  README.md  pyproject.toml  utils.py
